--- a/index.html
+++ b/index.html
@@ -69,20 +69,40 @@
             </div>
         </div>
         <div id="site-info">
-            <div class="element">
-                <a href="https://ak-2302.github.io/index.html">
-                    <img src="https://img.icons8.com/ios/50/000000/home.png" alt="home" blank>
-                </a>
+            <div class="site-info-head">Sources of this site</div>
+            <div class="elements">
+                <div class="element">
+                    <a href="https://github.com/ak-2302/ak-2302/blob/main/index.html">
+                        <img src="https://qiita-user-contents.imgix.net/https%3A%2F%2Fqiita-image-store.s3.ap-northeast-1.amazonaws.com%2F0%2F1022001%2F7fcb9e96-1fac-ecd9-67d0-f55644c520a9.png?ixlib=rb-4.0.0&auto=format&gif-q=60&q=75&w=1400&fit=max&s=f262b192c9e68701e2d412697d8fb781"
+                            alt="home" blank>
+                    </a>
+                </div>
+                <div class="element">
+                    <a href="https://github.com/ak-2302/ak-2302/blob/main/style.css">
+                        <img src="https://images.icon-icons.com/2415/PNG/512/css_plain_logo_icon_146573.png"
+                            alt="profile" blank>
+                    </a>
+                </div>
+                <div class="element">
+                    <a href="https://ak-2302.github.io/index.html#links">
+                        <img src="https://github.com/voodootikigod/logo.js/blob/master/js.png?raw=true" alt="links"
+                            blank>
+                    </a>
+                </div>
             </div>
-            <div class="element">
-                <a href="https://ak-2302.github.io/style.css">
-                    <img src="https://img.icons8.com/ios/50/000000/user-male-circle.png" alt="profile" blank>
-                </a>
+            <div class="credits-head">Credits</div>
+            <div class="credits">
+                <div class="elements">
+                    <div class="element">Background image: Designed by Freepik</div>
+                </div>
             </div>
-            <div class="element">
-                <a href="https://ak-2302.github.io/index.html#links">
-                    <img src="https://img.icons8.com/ios/50/000000/link.png" alt="links" blank>
-                </a>
+            <div class="references-head">References</div>
+            <div class="references">
+                <div class="elements">
+                    <div class="element">
+                        <a href="https://qiita.com/Ry0xi/items/857687c892f783955fe1">よく使う技術・サービスの公式ロゴのURLをまとめてみた！</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
