--- a/index.html
+++ b/index.html
@@ -51,23 +51,38 @@
             </div>
         </div>
         <div id="links">
-            <div class="element">
-                <a href="http://twitter.com/ak-2302">
-                    <img src="https://img.icons8.com/ios/50/twitterx--v1.png" alt="twitter" blank>
-                </a>
-            </div>
-            <div class="element">
-                <a href="https://github.com/ak-2302">
-                    <img src="https://img.icons8.com/ios/50/github.png" alt="github" blank>
-                </a>
-            </div>
-            <div class="element">
-                <a href="https://qiita.com/ak-2302">
-                    <img src="https://img.icons8.com/external-tal-revivo-color-tal-revivo/24/external-qiita-a-technical-information-sharing-service-for-programmers-logo-color-tal-revivo.png"
-                        alt="qiita" blank>
-                </a>
+            <div class="links-head">Links</div>
+            <div class="elements">
+                <div class="element">
+                    <a href="http://twitter.com/ak-2302">
+                        <img src="https://img.icons8.com/ios/50/twitterx--v1.png" alt="twitter" blank>
+                    </a>
+                </div>
+                <div class="element">
+                    <a href="https://github.com/ak-2302">
+                        <img src="https://img.icons8.com/ios/50/github.png" alt="github" blank>
+                    </a>
+                </div>
+                <div class="element">
+                    <a href="https://qiita.com/ak-2302">
+                        <img src="https://img.icons8.com/external-tal-revivo-color-tal-revivo/24/external-qiita-a-technical-information-sharing-service-for-programmers-logo-color-tal-revivo.png"
+                            alt="qiita" blank>
+                    </a>
+                </div>
             </div>
         </div>
+        <div id="portfolio">
+            <div class="portfolio-head">Portfolio</div>
+            <div class="elements">
+                <div class="element">
+                    test
+                </div>
+            </div>
+        </div>
+
+
+
+
         <div id="site-info">
             <div class="site-info-head">Sources of this site</div>
             <div class="elements">
