--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 </head>
 
 <body id="body">
-    <div class="header">
-    </div>
+    <img id="icon" src="https://avatars.githubusercontent.com/u/120778568?v=4" alt="icon" blank>
     <div id="main">
         <div id="profile">
             <div id="name">
@@ -77,6 +76,14 @@
                 <div class="element">
                     test
                 </div>
+            </div>
+        </div>
+
+        <div id="license">
+            <div class="license-head">License</div>
+            <div class="elements">
+                <div class="element">基本情報技術者</div>
+                <div class="element">普通自動車免許</div>
             </div>
         </div>
 
