--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body id="body">
-    <img id="icon" src="https://avatars.githubusercontent.com/u/120778568?v=4" alt="icon" blank>
+    <img id="icon" src="https://avatars.githubusercontent.com/u/120778568?v=4" alt="icon">
     <div id="main">
         <div id="profile">
             <div id="name">
