--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
                 </div>
                 <div class="element">
                     <a href="https://qiita.com/ak-2302">
-                        <img src="https://img.icons8.com/external-tal-revivo-color-tal-revivo/24/external-qiita-a-technical-information-sharing-service-for-programmers-logo-color-tal-revivo.png"
-                            alt="qiita" blank>
+                        <img src="img\qiita-icon.png" alt="qiita" blank>
                     </a>
                 </div>
             </div>
@@ -124,15 +123,19 @@
                     <div class="element">
                         <a href="https://qiita.com/Ry0xi/items/857687c892f783955fe1">よく使う技術・サービスの公式ロゴのURLをまとめてみた！</a>
                     </div>
+                    <div class="element">
+                        <a href="https://help.qiita.com/ja/articles/others-brand-guideline">メディアキット Qiitaヘルプ</a>
+                    </div>
+                    <div class="element">
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
 
-    <div id="footer">
-    </div>
-    <script src="style.js"></script>
+        <div id="footer">
+        </div>
+        <script src="style.js"></script>
 </body>
 
 </html>
