--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 </head>
 
 <body id="body">
-    <img id="icon" src="https://avatars.githubusercontent.com/u/120778568?v=4" alt="icon">
+    <div id="icon">
+        <img src="https://avatars.githubusercontent.com/u/120778568?v=4" alt="icon">
+    </div>
     <div id="main">
         <div id="profile">
             <div id="name">
