--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="links-head">Links</div>
             <div class="elements">
                 <div class="element">
-                    <a href="http://twitter.com/ak-2302">
+                    <a href="http://twitter.com/ak_2302x">
                         <img src="https://img.icons8.com/ios/50/twitterx--v1.png" alt="twitter" blank>
                     </a>
                 </div>
@@ -68,6 +68,25 @@
                     <a href="https://qiita.com/ak-2302">
                         <img src="img\qiita-icon.png" alt="qiita" blank>
                     </a>
+                </div>
+            </div>
+            <div id="recent_activity">
+                <div class="recent_activity-head">Recent Activity</div>
+                <div class="tabs">
+                    <div class="tab">Twitter</div>
+                    <div class="tab">GitHub</div>
+                    <div class="tab">Qiita</div>
+                </div>
+                <div class="contents">
+                    <div class="content_twitter">
+                        <a class="twitter-timeline" href="https://twitter.com/ak_2302x?ref_src=twsrc%5Etfw">Tweets by
+                            ak_2302x</a>
+                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                    </div>
+                    <div class="content_github">
+                    </div>
+                    <div class="content_qiita">
+                    </div>
                 </div>
             </div>
         </div>
