--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
             <div class="portfolio-head">Portfolio</div>
             <div class="elements">
                 <div class="element">
-                    test
+                    <div class="title">Discord.pyを用いたbot制作</div>
+                    <div class="content">https://qiita.com/ak-2302/items/8d36a3fc7bdedbc792ce</div>
                 </div>
             </div>
         </div>
@@ -122,6 +123,18 @@
                 <div class="element">普通自動車免許</div>
             </div>
         </div>
+
+        <div id="blog">
+            <div class="blog-head">Blog</div>
+            <div class="elements">
+                <div class="element">
+                    <a href="https://qiita.com/ak-2302" text-decoration="none">Qiita</a>
+                </div>
+            </div>
+        </div>
+
+
+
 
 
         <div id="contact">
