--- a/tools/tsukuba_univ_search_class/index.html
+++ b/tools/tsukuba_univ_search_class/index.html
@@ -52,7 +52,7 @@
                     <span class="introduction-step-head">📌 STEP</span>
                     <span class="introduction-step-num">3</span>
                 </div>
-                <p class="introduction-step-description">授業名を入力 or 選択</p>
+                <p class="introduction-step-description">授業名を入力(完全一致)</p>
             </div>
 
             <div class="introduction-steps">
