--- a/index.html
+++ b/index.html
@@ -139,28 +139,22 @@
 
         <div id="contact">
             <div class="contact-head">Contact Me</div>
-            <form
-                action="https://docs.google.com/forms/d/e/1FAIpQLSeLJwK87hwLpntnXdUrnS-0mSQnKp6xcyWj_4zkavxH7-QVXw/viewform?usp=dialog"
-                method="post">
+            <form action="https://submit-form.com/BYqueyFDn" method="post">
                 <div id="contact_name">
                     <p>ニックネーム</p>
-                    <input name="entry.1131111729" class="c-form__input" placeholder="Name" id="contact_name_input"
-                        required="required" type="text">
+                    <input name="name" id="contact_name_input" required="required" type="text">
                 </div>
                 <div id="contact_belong">
                     <p>所属</p>
-                    <input name="entry.48228104" class="c-form__input" placeholder="Belong" id="contact_belong_input"
-                        required="required" type="text">
+                    <input name="belong" id="contact_belong_input" required="required" type="text">
                 </div>
                 <div id="contact_email">
                     <p>メールアドレス</p>
-                    <input name="entry.1623069793" class="c-form__input" placeholder="Email" id="contact_email_input"
-                        required="required" type="email">
+                    <input name="email" id="contact_email_input" required="required" type="email">
                 </div>
                 <div id="contact_message">
                     <p>メッセージ</p>
-                    <textarea name="entry.1334927024" class="c-form__input" placeholder="Message"
-                        id="contact_message_input" required="required"></textarea>
+                    <textarea name="message" id="contact_message_input" required="required"></textarea>
                 </div>
                 <div id="contact_submit">
                     <input type="submit" value="送信" id="contact_submit_input">
