--- a/index.html
+++ b/index.html
@@ -68,17 +68,17 @@
             <div class="elements">
                 <div class="element">
                     <a href="http://twitter.com/ak_2302x">
-                        <img src="https://img.icons8.com/ios/50/twitterx--v1.png" alt="twitter" blank>
+                        <img src="https://img.icons8.com/ios/50/twitterx--v1.png" alt="twitter" target="_blank">
                     </a>
                 </div>
                 <div class="element">
                     <a href="https://github.com/ak-2302">
-                        <img src="https://img.icons8.com/ios/50/github.png" alt="github" blank>
+                        <img src="https://img.icons8.com/ios/50/github.png" alt="github" target="_blank">
                     </a>
                 </div>
                 <div class="element">
                     <a href="https://qiita.com/ak-2302">
-                        <img src="img\qiita-icon.png" alt="qiita" blank>
+                        <img src="img\qiita-icon.png" alt="qiita" target="_blank">
                     </a>
                 </div>
             </div>
@@ -96,10 +96,11 @@
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                     </div>
                     <div class="content_github" id="content_github">
-                        <img alt="Top Langs"
+                        <img alt="GitHub stats"
                             src="https://github-readme-stats.vercel.app/api?username=ak-2302&theme=vue-dark&layout=compact" />
-                        <img alt="github stats"
+                        <img alt="Top Langs"
                             src="https://github-readme-stats.vercel.app/api/top-langs/?username=ak-2302&theme=vue-dark&layout=compact" />
+
                     </div>
                     <div class="content_qiita" id="content_qiita">
                     </div>
@@ -168,19 +169,19 @@
                 <div class="element">
                     <a href="https://github.com/ak-2302/ak-2302/blob/main/index.html">
                         <img src="https://qiita-user-contents.imgix.net/https%3A%2F%2Fqiita-image-store.s3.ap-northeast-1.amazonaws.com%2F0%2F1022001%2F7fcb9e96-1fac-ecd9-67d0-f55644c520a9.png?ixlib=rb-4.0.0&auto=format&gif-q=60&q=75&w=1400&fit=max&s=f262b192c9e68701e2d412697d8fb781"
-                            alt="home" blank>
+                            alt="home" target="_blank">
                     </a>
                 </div>
                 <div class="element">
                     <a href="https://github.com/ak-2302/ak-2302/blob/main/style.css">
                         <img src="https://images.icon-icons.com/2415/PNG/512/css_plain_logo_icon_146573.png"
-                            alt="profile" blank>
+                            alt="profile" target="_blank">
                     </a>
                 </div>
                 <div class="element">
                     <a href="https://ak-2302.github.io/index.html#links">
                         <img src="https://github.com/voodootikigod/logo.js/blob/master/js.png?raw=true" alt="links"
-                            blank>
+                            target="_blank">
                     </a>
                 </div>
             </div>
@@ -217,7 +218,7 @@
             <img src="./img/cat.png" id="cat">
             <img src="./img/cat2.png" id="cat2">
         </div>
-        <script src="style.js"></script>
+        <script src="script.js"></script>
 </body>
 
 </html>
