--- a/tools/index.html
+++ b/tools/index.html
@@ -18,7 +18,7 @@
                 <div class="tool">
                     <div class="tool-info">
                         <div class="tool-name">筑波大教室検索</div>
-                        <div class="tool-description">配布されたCSVファイルから講義ごとの使用教室を検索します.
+                        <div class="tool-description">CSVファイルから講義ごとの使用教室を検索します.
                         </div>
                     </div>
                     <div class="tool-preview">
@@ -26,6 +26,19 @@
                     </div>
                 </div>
             </div>
+            <div class="tool-wraper">
+                <div class="tool">
+                    <div class="tool-info">
+                        <div class="tool-name">xlsx to csv</div>
+                        <div class="tool-description">.xlsxを.csvに変換します.
+                        </div>
+                    </div>
+                    <div class="tool-preview">
+                        <iframe src="./xlsx_to_csv/index.html" frameborder="0"></iframe>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
     <div id="footer">
