--- a/tools/tsukuba_univ_search_class/index.html
+++ b/tools/tsukuba_univ_search_class/index.html
@@ -36,13 +36,21 @@
                     <span class="introduction-step-head">📌 STEP</span>
                     <span class="introduction-step-num">1</span>
                 </div>
-                <p class="introduction-step-description">TWINTEからCSVをダウンロード</p>
+                <p class="introduction-step-description">TWINTEからxlsxをダウンロード</p>
             </div>
-
             <div class="introduction-steps">
                 <div class="introduction-step-header">
                     <span class="introduction-step-head">📌 STEP</span>
                     <span class="introduction-step-num">2</span>
+                </div>
+                <p class="introduction-step-description">xlsxをcsvに変換</p>
+            </div>
+
+
+            <div class="introduction-steps">
+                <div class="introduction-step-header">
+                    <span class="introduction-step-head">📌 STEP</span>
+                    <span class="introduction-step-num">3</span>
                 </div>
                 <p class="introduction-step-description">下のボタンからCSVファイルをアップロード</p>
             </div>
@@ -50,7 +58,7 @@
             <div class="introduction-steps">
                 <div class="introduction-step-header">
                     <span class="introduction-step-head">📌 STEP</span>
-                    <span class="introduction-step-num">3</span>
+                    <span class="introduction-step-num">4</span>
                 </div>
                 <p class="introduction-step-description">授業名を入力(完全一致)</p>
             </div>
@@ -58,7 +66,7 @@
             <div class="introduction-steps">
                 <div class="introduction-step-header">
                     <span class="introduction-step-head">📌 STEP</span>
-                    <span class="introduction-step-num">4</span>
+                    <span class="introduction-step-num">5</span>
                 </div>
                 <p class="introduction-step-description">結果が出力されます！！</p>
             </div>
