--- a/tools/tsukuba_univ_search_class/index.html
+++ b/tools/tsukuba_univ_search_class/index.html
@@ -43,7 +43,9 @@
                     <span class="introduction-step-head">📌 STEP</span>
                     <span class="introduction-step-num">2</span>
                 </div>
-                <p class="introduction-step-description">xlsxをcsvに変換</p>
+                <p class="introduction-step-description">
+                    xlsxをcsvに変換</p>
+
             </div>
 
 
