--- a/tools/index.html
+++ b/tools/index.html
@@ -22,7 +22,7 @@
                         </div>
                     </div>
                     <div class="tool-preview">
-                        <iframe src="./tsukuba_univ_search_class/index.html" frameborder="0" scrolling="no"></iframe>
+                        <iframe src="./tsukuba_univ_search_class/" frameborder="0" scrolling="no"></iframe>
                     </div>
                 </div>
             </div>
@@ -34,7 +34,19 @@
                         </div>
                     </div>
                     <div class="tool-preview">
-                        <iframe src="./xlsx_to_csv/index.html" frameborder="0" scrolling="no"></iframe>
+                        <iframe src="./xlsx_to_csv/" frameborder="0" scrolling="no"></iframe>
+                    </div>
+                </div>
+            </div>
+            <div class="tool-wraper">
+                <div class="tool">
+                    <div class="tool-info">
+                        <div class="tool-name">GitHubをダウンロード</div>
+                        <div class="tool-description">自分のリポジトリをzip形式でダウンロードします。事前にAPIキーの発行が必要です。
+                        </div>
+                    </div>
+                    <div class="tool-preview">
+                        <iframe src="./github_download/" frameborder="0" scrolling="no"></iframe>
                     </div>
                 </div>
             </div>
