--- a/tools/index.html
+++ b/tools/index.html
@@ -22,7 +22,7 @@
                         </div>
                     </div>
                     <div class="tool-preview">
-                        <iframe src="./tsukuba_univ_search_class/" frameborder="0" scrolling="no"></iframe>
+                        <iframe src="./tsukuba_univ_search_class/index.html" frameborder="0" scrolling="no"></iframe>
                     </div>
                 </div>
             </div>
@@ -34,7 +34,7 @@
                         </div>
                     </div>
                     <div class="tool-preview">
-                        <iframe src="./xlsx_to_csv/" frameborder="0" scrolling="no"></iframe>
+                        <iframe src="./xlsx_to_csv/index.html" frameborder="0" scrolling="no"></iframe>
                     </div>
                 </div>
             </div>
@@ -46,7 +46,7 @@
                         </div>
                     </div>
                     <div class="tool-preview">
-                        <iframe src="./github_download/" frameborder="0" scrolling="no"></iframe>
+                        <iframe src="./github_download/index.html" frameborder="0" scrolling="no"></iframe>
                     </div>
                 </div>
             </div>
