--- a/tools/index.html
+++ b/tools/index.html
@@ -46,7 +46,7 @@
                         </div>
                     </div>
                     <div class="tool-preview">
-                        <iframe src="./github_download/index.html" frameborder="0" scrolling="no"></iframe>
+                        <iframe src="./GitHub_download/index.html" frameborder="0" scrolling="no"></iframe>
                     </div>
                 </div>
             </div>
