--- a/tools/index.html
+++ b/tools/index.html
@@ -50,6 +50,18 @@
                     </div>
                 </div>
             </a>
+            <a class="tool-wraper">
+                <div class="tool">
+                    <div class="tool-info">
+                        <div class="tool-name">伏字パスワード表示</div>
+                        <div class="tool-description">ブラウザで伏字になっているパスワードを表示します。開発者モードで拡張機能を読み込む必要があります。
+                        </div>
+                    </div>
+                    <div class="tool-preview">
+                        <iframe src="./get_pass/index.html" frameborder="0" scrolling="no"></iframe>
+                    </div>
+                </div>
+            </a>
         </div>
     </div>
     <div id="footer">
