--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
         </div>
         <div id="links">
             <div class="links-head">Links</div>
+            <div id="tools">
+                <a href="./tools/index.html">作成したツール類</a>
+            </div>
             <div class="elements">
                 <div class="element">
                     <a href="http://twitter.com/ak_2302x">
