--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div id="links">
             <div class="links-head">Links</div>
             <div id="tools">
-                <a href="./tools/index.html">作成したツール類</a>
+                <a href="./tools/">作成したツール類</a>
             </div>
             <div class="elements">
                 <div class="element">
