--- a/links/index.html
+++ b/links/index.html
@@ -14,6 +14,24 @@
         <h1>Links</h1>
         <p>リンク</p>
     </div>
+    <div id="icons">
+        <a href="https://github.com/ak-2302" id="github">
+            <p>GitHub</p>
+            <img src="./image/github.png" alt="github" />
+        </a>
+        <a href="https://x.com/ak_2302x" id="x">
+            <p>X</p>
+            <img src="./image/x.png" alt="X">
+        </a>
+        <a href="https://qiita.com/ak-2302" id="qiita">
+            <p>Qiita</p>
+            <img src="./image/qiita.png" alt="Qiita">
+        </a>
+        <a href="https://zenn.dev/ak2302" id="zenn">
+            <p>Zenn</p>
+            <img src="./image/zenn.svg" alt="Zenn">
+        </a>
+    </div>
 </body>
 
 </html>
