--- a/index.html
+++ b/index.html
@@ -2,56 +2,77 @@
 <html lang="ja">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Home — ak-2302</title>
 
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css" />
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
-    </style>
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Noto+Sans+JP&display=swap" />
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body id="body">
-    <div id="loader">
-        <div id="loader-bg"></div>
-        <div id="loader-circle-back"></div>
-        <div id="loader-circle"></div>
-        <div id="loader-inner">
-            <div id="loader-rate">0%</div>
-            <div id="loader-text">Loading...</div>
+    <header class="site-header">
+        <div class="header-inner">
+            <a class="site-title" href="./">ak-2302</a>
+            <nav class="site-nav" aria-label="site navigation">
+                <a href="./blog/diary/viewer/index.html?md=test.md">日記</a>
+                <a href="https://github.com/ak-2302" target="_blank" rel="noopener">GitHub</a>
+            </nav>
         </div>
-    </div>
+    </header>
 
+    <main id="main" class="main-wrap">
+        <section id="introduction" class="card intro">
+            <h1>ようこそ</h1>
+            <p class="lead">技術メモや日記を公開しています。下のリンクからコンテンツを確認できます。</p>
+        </section>
 
+        <section id="link" class="card links">
+            <a href="http://twitter.com/ak_2302x" target="_blank" rel="noopener" aria-label="Twitter">
+                <img src="https://img.icons8.com/ios/50/twitterx--v1.png" alt="twitter">
+            </a>
+            <a href="https://github.com/ak-2302" target="_blank" rel="noopener" aria-label="GitHub">
+                <img src="https://img.icons8.com/ios/50/github.png" alt="github">
+            </a>
+            <a href="https://qiita.com/ak-2302" target="_blank" rel="noopener" aria-label="Qiita">
+                <img src="https://img.icons8.com/ios/50/qiita.png" alt="qiita">
+            </a>
+            <a href="https://zenn.dev/ak2302" target="_blank" rel="noopener" aria-label="Zenn">
+                <img src="https://img.icons8.com/ios/50/home--v1.png" alt="zenn">
+            </a>
+        </section>
 
-    <div id="main">
-        <div id="menu">
-            <div id="menu-title">Welcome</div>
-            <div id="site-map" class="menu-item">
-                <iframe src="./site_map/index.html" frameborder="0"></iframe>
+        <section id="diary" class="card diary">
+            <h2>日記ビューア</h2>
+            <div class="iframe-wrap">
+                <iframe src="https://ak-2302.github.io/blog/diary/" frameborder="0" title="diary viewer"></iframe>
             </div>
-            <div id="profile" class="menu-item">
-                <iframe src="./profile/index.html" frameborder="0"></iframe>
-            </div>
-            <div id="links" class="menu-item">
-                <iframe src="./links/index.html" frameborder="0"></iframe>
-            </div>
-            <div id="activity" class="menu-item">
-                <iframe src="./activity/index.html" frameborder="0"></iframe>
-            </div>
-            <div id="portfolio" class="menu-item">
-                <iframe src="./portfolio/index.html" frameborder="0"></iframe>
-            </div>
-            <div id="contact" class="menu-item">
-                <iframe src="./contact/index.html" frameborder="0"></iframe>
-            </div>
-        </div>
-    </div>
-    <script src="./script.js">
+        </section>
+
+        <section id="contact" class="card contact">
+            <h2>お問い合わせ</h2>
+            <form id="contactForm" novalidate>
+                <input type="text" name="name" id="name" placeholder="Your Name" />
+                <input type="email" name="email" id="email" placeholder="Your Email" />
+                <textarea name="message" id="message" placeholder="Your Message" rows="5"></textarea>
+                <div class="form-actions">
+                    <button id="sendBtn" type="submit">Send</button>
+                </div>
+            </form>
+        </section>
+
+        <footer class="site-foot">
+            © <span id="year"></span> ak-2302
+        </footer>
+    </main>
+
+    <script>
+        document.getElementById('year').textContent = new Date().getFullYear();
     </script>
+    <script src="./script.js"></script>
 </body>
 
 </html>
