--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="header-inner">
             <a class="site-title" href="./">ak-2302</a>
             <nav class="site-nav" aria-label="site navigation">
-                <a href="./blog/diary/viewer/index.html?md=test.md">日記</a>
+                <a href="./blog/diary/viewer/index.html">日記</a>
                 <a href="https://github.com/ak-2302" target="_blank" rel="noopener">GitHub</a>
             </nav>
         </div>
