--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="header-inner">
             <a class="site-title" href="./">ak-2302</a>
             <nav class="site-nav" aria-label="site navigation">
-                <a href="./blog/diary/viewer/index.html">日記</a>
+                <a href="./blog/diary/">日記</a>
                 <a href="https://github.com/ak-2302" target="_blank" rel="noopener">GitHub</a>
             </nav>
         </div>
@@ -27,7 +27,6 @@
     <main id="main" class="main-wrap">
         <section id="introduction" class="card intro">
             <h1>ようこそ</h1>
-            <p class="lead">技術メモや日記を公開しています。下のリンクからコンテンツを確認できます。</p>
         </section>
 
         <section id="link" class="card links">
@@ -45,12 +44,6 @@
             </a>
         </section>
 
-        <section id="diary" class="card diary">
-            <h2>日記ビューア</h2>
-            <div class="iframe-wrap">
-                <iframe src="https://ak-2302.github.io/blog/diary/" frameborder="0" title="diary viewer"></iframe>
-            </div>
-        </section>
 
         <section id="contact" class="card contact">
             <h2>お問い合わせ</h2>
